2003-10-29  Alan Modra  <amodra@bigpond.net.au>

	* elf.c (_bfd_elfcore_make_pseudosection): Allow multiple
	sections with the same name.
	(elfcore_grok_lwpstatus): Likewise.
	(elfcore_grok_win32pstatus): Likewise.
	(elfcore_grok_note): Likewise.
	(elfcore_grok_nto_status): Likewise.
	(elfcore_grok_nto_gregs): Likewise.

2003-10-27  Daniel Jacobowitz  <drow@mvista.com>

	* elf32-arm.h (elf32_arm_merge_private_bfd_data): Never skip dynamic
	objects.

2003-10-14  Richard Sandiford  <rsandifo@redhat.com>

	* elfxx-mips.c (mips_elf_create_got_section): Initialize global_gotno.

2003-10-24  H.J. Lu  <hongjiu.lu@intel.com>

	* elflink.h (NAME(bfd_elf,size_dynamic_sections)): Look up
	hash table for real symbols.

2003-10-23  Michael Snyder  <msnyder@redhat.com>

	* section.c (asection): Fix typo in comment.

2003-10-23  Alan Modra  <amodra@bigpond.net.au>

	* elf64-ppc.c (get_tls_mask): Add toc_symndx param, save toc
	reloc symbol index to it.  Don't allow gd syms in shared libs
	to be optimized.
	(ppc64_elf_tls_optimize): Adjust get_tls_mask call.
	(ppc64_elf_size_stubs): Likewise.
	(ppc64_elf_relocate_section): Check that tls relocs are only used
	with tls syms, and similarly for non-tls.  Correct symbol used
	when optimizing toc tls code.

2003-10-22  Nick Clifton  <nickc@redhat.com>

	* peicode.h (coff_swap_scnhdr_in): Only remove padding when
	processing an executable.

2003-10-22  Jakub Jelinek  <jakub@redhat.com>

	* elflink.c (_bfd_elf_export_symbol): Adjust for globals and locals
	field changes.
	(_bfd_elf_link_assign_sym_version): Likewise.
	* elflink.h (size_dynamic_sections): Likewise.

2003-10-21  Alexandre Oliva  <aoliva@redhat.com>,
	    Michael Snyder  <msnyder@redhat.com>

	* archures.c (bfd_mach_sh4a, bfd_mach_sh4al_dsp, bfd_mach_sh4_nofpu,
	bfd_mach_sh4a_nofpu): New machine types.
	* bfd-in2.h: Rebuilt.
	* cpu-sh.c (compatible): Remove unused function.
	(SH4A_NEXT, SH4AL_DSP_NEXT, SH4_NOFPU_NEXT, SH4A_NOFPU_NEXT): New.